2008-07-23  Nestor Salceda  <nestor.salceda@gmail.com>

	* ConsiderUsingStaticTypeTest.cs: Fix the existing tests because they
	are a bit confusing.  This new tests removes several false positives.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidMultidimensionalIndexerTest.cs: New. Unit tests for 
	AvoidMultidimensionalIndexerRule.
	* PreferIntegerOrStringForIndexersTest.cs: New. Unit tests for 
	PreferIntegerOrStringForIndexersRule.
	* Test.Rules.Design.mdp: Add tests to MD project file.

2008-07-13  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRefAndOutParametersTest.cs: New. Unit tests for 
	AvoidRefAndOutParametersRule.
	* Test.Rules.Design.mdp: Add tests to MD project file.

2008-07-12  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderUsingStaticTypeTest.cs: New. Unit tests for 
	ConsiderUsingStaticTypeRule.

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidVisibleNestedTypesTest.cs: New. Unit tests for 
	AvoidVisibleNestedTypesRule.
	* Test.Rules.Design.mdp: Add tests to MD project file.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* UsingCloneWithoutImplementingICloneableTest.cs: Update test
	cases to new format. Change expected result when Clone does not 
	return System.Object.

2008-05-01  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingFieldToNullableRuleTest.cs: New. Test cases 
	for ConsiderConvertingFieldToNullableRule [Cedric Vivier].

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingMethodToPropertyTest.cs: Add test cases for 
	Has. Patch from Cedric Vivier.

2008-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderConvertingMethodToPropertyTest.cs: Ignore Set* without
	a Get* methods. Ignore overrides (can be out of developer's control,
	but the base virtual method will be reported if not). Update to use
	new test helpers.

2008-04-03  Daniel Abramov <ex@vingrad.ru>

	* ImplementGenericCollectionInterfacesTest.cs: New. Unit tests